# multi-agents

./: .gitignore  README.md  check_models.py  pyproject.toml
financial_advisor/: agent.py  prompt.py
financial_advisor/.adk/: session.db
financial_advisor/sub_agents/b3_data/: agent.py  tools.py
financial_advisor/sub_agents/data_analyst/: agent.py  tools.py
financial_advisor/sub_agents/lead_advisor/: agent.py  tools.py
tests/: test_finance.py
